force-app/main/default/objects/Deployment_Component__c/Deployment_Component__c.object-meta.xml
<CustomObject>
    <description>Stores individual components included in a metadata deployment</description>
    <label>Deployment Component</label>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>