force-app/main/default/objects/Deployment_Component__c/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <description>Last modified date of the component</description>
    <label>Last Modified Date</label>
    <type>DateTime</type>
</CustomField>