force-app/main/default/objects/Deployment_Component__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of metadata component</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>